--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"start": "DEBUG=satellite node dist/index.js",
+		"start": "DEBUG='satellite,satellite:*' node dist/index.js",
+		"dev": "DEBUG='satellite,satellite:*' node dist/index.js",
 		"build": "tsc",
 		"format": "prettier -w ."
 	},
 	"dependencies": {
+		"@noble/hashes": "^1.4.0",
 		"better-sqlite3": "^9.4.4",
+		"dayjs": "^1.11.10",
 		"debug": "^4.3.4",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"nostr-tools": "^2.4.0",
 		"ws": "^8.16.0"
 	},
 	"devDependencies": {
