--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"debug": "^4.3.4",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"holesail-server": "^1.3.4",
 		"nostr-tools": "^2.4.0",
 		"ws": "^8.16.0"
 	},
