create delete events for removed channels

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
 		"module": "NodeNext",
 		"target": "es2020",
 		"moduleResolution": "NodeNext",
+		"esModuleInterop": true,
 		"outDir": "dist",
 		"skipLibCheck": true,
 		"declaration": true,
-		"allowJs": true,
-		"strict": true
+		"allowJs": false,
+		"strict": true,
+		"sourceMap": true
 	},
 	"include": ["src"]
 }
