--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"holesail-server": "^1.3.4",
-		"nostr-tools": "^2.4.0",
+		"nostr-tools": "^2.5.0",
 		"ws": "^8.16.0"
 	},
 	"devDependencies": {
@@ -30,6 +30,7 @@
 		"@types/node": "^20.12.3",
 		"@types/ws": "^8.5.10",
 		"prettier": "^3.2.5",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.4.3"
 	}
 }
