--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,12 +3,12 @@ name: Docker image
 on:
   push:
     branches:
-      - "**"
+      - '**'
     tags:
-      - "v*.*.*"
+      - 'v*.*.*'
   pull_request:
     branches:
-      - "master"
+      - 'master'
 
 env:
   REGISTRY: ghcr.io
@@ -55,10 +55,12 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
+          always-auth: 'true'
       - name: Install Dependencies
         run: yarn install
         env:
           NODE_ENV: production
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
