--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@noble/hashes": "^1.4.0",
+		"@satellite-earth/community-ui": "^0.1.0",
 		"@satellite-earth/core": "^0.1.2",
 		"better-sqlite3": "^9.4.4",
 		"dayjs": "^1.11.10",
