--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	},
 	"private": true,
 	"scripts": {
-		"start": "DEBUG='satellite,satellite:*' node dist/index.js",
-		"dev": "DEBUG='satellite,satellite:*' node dist/index.js",
+		"start": "node dist/index.js",
+		"dev": "nodemon --loader @swc-node/register/esm src/index.ts",
 		"build": "tsc",
 		"format": "prettier -w ."
 	},
@@ -29,13 +29,22 @@
 		"ws": "^8.16.0"
 	},
 	"devDependencies": {
+		"@swc-node/register": "^1.9.0",
+		"@swc/core": "^1.5.0",
 		"@types/better-sqlite3": "^7.6.9",
 		"@types/debug": "^4.1.12",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.12.3",
 		"@types/ws": "^8.5.10",
+		"nodemon": "^3.1.0",
 		"prettier": "^3.2.5",
-		"ts-node": "^10.9.2",
 		"typescript": "^5.4.3"
+	},
+	"nodemonConfig": {
+		"ignore": [
+			"data/**"
+		],
+		"exec": "node",
+		"signal": "SIGTERM"
 	}
 }
