--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"url": "git+https://github.com/satellite-earth/public-node.git"
 	},
 	"files": [
-		"dist"
+		"dist",
+		"views"
 	],
 	"bin": "dist/index.js",
 	"scripts": {
@@ -24,18 +25,23 @@
 		"@satellite-earth/community-ui": "^0.1.1",
 		"@satellite-earth/core": "^0.1.2",
 		"better-sqlite3": "^9.4.4",
+		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.10",
 		"debug": "^4.3.4",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"holesail-server": "^1.3.4",
+		"mkdirp": "^3.0.1",
 		"nostr-tools": "^2.5.0",
+		"pug": "^3.0.2",
 		"ws": "^8.16.0"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.27.1",
 		"@swc-node/register": "^1.9.0",
 		"@swc/core": "^1.5.0",
 		"@types/better-sqlite3": "^7.6.9",
+		"@types/body-parser": "^1.19.5",
 		"@types/debug": "^4.1.12",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.12.3",
