--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"holesail-server": "^1.3.4",
+		"import-meta-resolve": "^4.1.0",
 		"mkdirp": "^3.0.1",
 		"nostr-tools": "^2.5.0",
 		"pug": "^3.0.2",
