--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"name": "node",
 			"type": "node",
 			"request": "launch",
-			"args": ["dist/index.js"],
+			"args": ["src/index.ts"],
 			"runtimeArgs": ["--loader", "@swc-node/register/esm"],
 			"cwd": "${workspaceRoot}",
 			"protocol": "inspector",
