--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
-		"@swc-node/register": "^1.9.1",
+		"@swc-node/register": "1.8.0",
 		"@swc/core": "^1.4.17",
 		"@types/better-sqlite3": "^7.6.9",
 		"@types/body-parser": "^1.19.5",
